Added - LunaLib Settings
Added - Setting to adjust column amount in all the ship pickers in this mod
Added - Planet Jump listener, interface to notify when a planet has finished jumping via rift generator (for modders)
Adjusted - Rules.csv $market -> $marketName for 0.96
Adjusted - Code Changes for 0.96
Adjusted - All industry images got touch-ups to bring them more in line with vanilla

Pets
Added - Pets: Add them to your ship, feed em, make em happy, and they'll accompany you! And die!
Added - Research Project for a rare Pet
Added - Industry: Animal Center

Automated Shipyards
Added - Rare chance for a ship to be an automated variant, usable without the skill
Adjusted - new interaction image (the old one was kinda trash)

Salvage Interactions
Adjusted - Default columns for ship picking on Ship Sacrifice event increased from 5 to 8
Fixed - "Exploding Room" special can now pick (certain) Industrial Evolution items again

Minefields
Added - Mines now get temporarily disabled by an interdiction pulse
Added - Tooltip showing controlling entity
Adjusted - Made NPC fleets react to them better (no more jiggling around)
Fixed - Base damage halved
Fixed - Damage now properly scales with fleet size (hit chance is still fleet size and speed)

Items
Adjusted - Simulation Engine - Added tooltip info about scaling effect
Adjusted - Neural Compounds - Clarified tooltip if senate with item is in range or not
Fixed - Planet "in Range" tooltip no longer incorrectly states 12 LY range restriction for hypertransmitter, it's infinite as intended
Fixed - Crash when tech locator tries to point to a system that has no hyperspace anchor (????)

Artillery
Added - NPC fleets now respond to artillery fire and try to dodge. They are better at it than me.
Adjusted - Made all stations, modded or otherwise, compatible with artillery (Praise be Alex, our lord and saviour)
Fixed - Artillery Stations should no longer be stuck in repairs on game start (should)