@@ -56,6 +56,9 @@ Adjusted - Code Changes for 0.96
 Adjusted - All industry images got touch-ups to bring them more in line with vanilla
 
 Pets
+todo: Pets dropping from explo
+todo: Admiral Pirrot and the Starcracker-class Breadnought
+todo: pet storage, move, remove and rename UI
 Added - Pets: Add them to your ship, feed em, make em happy, and they'll accompany you! And die!
 Added - Research Project for a rare Pet
 Added - Industry: Animal Center
